--- a/autotests/dbusrunnertest.desktop
+++ b/autotests/dbusrunnertest.desktop
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: none
+# SPDX-License-Identifier: CC0-1.0
 [Desktop Entry]
 Name=DBus runner test
 Comment=DBus runner test
