--- a/autotests/dbusrunnertestmulti.desktop
+++ b/autotests/dbusrunnertestmulti.desktop
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: none
+# SPDX-License-Identifier: CC0-1.0
 [Desktop Entry]
 Name=DBus runner testmulti
 Comment=DBus runner testmulti
