--- a/autotests/metadatafile2.desktop
+++ b/autotests/metadatafile2.desktop
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: none
+# SPDX-License-Identifier: CC0-1.0
 [Desktop Entry]
 Name=DBus runner test
 X-KDE-ServiceTypes=Plasma/Runner
