Port away from ECMSetupVersion's deprecated *_VERSION_STRING CMake variable
NO_CHANGELOG

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,7 +64,7 @@ if(HAVE_KACTIVITIES)
 endif()
 
 set_target_properties(KF5Runner
-    PROPERTIES VERSION ${KRUNNER_VERSION_STRING}
+    PROPERTIES VERSION ${KRUNNER_VERSION}
     SOVERSION 5
     EXPORT_NAME "Runner"
 )
