--- a/src/data/servicetypes/plasma-runner.desktop
+++ b/src/data/servicetypes/plasma-runner.desktop
@@ -53,6 +53,7 @@ Comment[x-test]=xxKRunner pluginxx
 Comment[zh_CN]=KRunner 插件
 Comment[zh_TW]=KRunner 外掛程式
 
+# TODO KF6 remove
 [PropertyDef::X-Plasma-AdvertiseSingleRunnerQueryMode]
 Type=bool
 
