--- a/src/declarative/CMakeLists.txt
+++ b/src/declarative/CMakeLists.txt
@@ -1,16 +1,18 @@
 project(runnermodel)
 
-set(runnermodel_SRCS
+add_library(runnermodelplugin SHARED)
+
+target_sources(runnermodelplugin PRIVATE
     runnermodel.cpp
     runnermodelplugin.cpp
-    )
-ecm_qt_declare_logging_category(runnermodel_SRCS
+)
+
+ecm_qt_declare_logging_category(runnermodelplugin
     HEADER krunner_debug.h
     IDENTIFIER KRUNNER
     CATEGORY_NAME kf.runner.quick
 )
 
-add_library(runnermodelplugin SHARED ${runnermodel_SRCS})
 target_link_libraries(runnermodelplugin
         Qt5::Quick
         Qt5::Qml
