--- a/src/data/servicetypes/plasma-runner.desktop
+++ b/src/data/servicetypes/plasma-runner.desktop
@@ -57,6 +57,7 @@ Comment[zh_TW]=KRunner 外掛程式
 [PropertyDef::X-Plasma-AdvertiseSingleRunnerQueryMode]
 Type=bool
 
+# TODO KF6 remove
 [PropertyDef::TryExec]
 Type=QString
 
