Add license information to cmake files
See the KDE licensing policy and https://community.kde.org/Policies/Licensing_Policy#December_2020 for reference

--- a/KF5RunnerConfig.cmake.in
+++ b/KF5RunnerConfig.cmake.in
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: Friedrich W. H. Kossebau <kossebau@kde.org>
+# SPDX-FileCopyrightText: Aleix Pol <aleixpol@kde.org>
+# SPDX-License-Identifier: BSD-2-Clause
+
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
