--- a/src/declarative/CMakeLists.txt
+++ b/src/declarative/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: KDE contributors
+# SPDX-License-Identifier: BSD-2-Clause
 project(runnermodel)
 
 add_library(runnermodelplugin SHARED)
