--- a/src/data/servicetypes/plasma-runner.desktop
+++ b/src/data/servicetypes/plasma-runner.desktop
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: none
+# SPDX-License-Identifier: CC0-1.0
+
 [Desktop Entry]
 Type=ServiceType
 X-KDE-ServiceType=Plasma/Runner
