Add missing SPDX info to templates/CMakeLists.txt

--- a/templates/CMakeLists.txt
+++ b/templates/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: KDE Contributors
+# SPDX-License-Identifier: BSD-2-Clause
+
 set(apptemplate_DIRS
     runner
     runnerpython
