--- a/KF5RunnerConfig.cmake.in
+++ b/KF5RunnerConfig.cmake.in
@@ -5,7 +5,7 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
-find_dependency(Qt5Core "@REQUIRED_QT_VERSION@")
+find_dependency(Qt@QT_MAJOR_VERSION@Core "@REQUIRED_QT_VERSION@")
 find_dependency(KF5Plasma "@KF_DEP_VERSION@")
 
 @PACKAGE_SETUP_AUTOMOC_VARIABLES@
