KF5RunnerConfig.cmake.in: Explicitly require QtGui and KCoreAddons, exclude Plasma on deprecation free builds
This way we have less implicit deps and do not include Plasma on the consumer side when building without deprecations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,8 @@ if(NOT EXCLUDE_DEPRECATED_BEFORE_AND_AT STREQUAL "CURRENT" AND
     find_package(KF5KIO ${KF_DEP_VERSION} REQUIRED)
     find_package(KF5Service ${KF_DEP_VERSION} REQUIRED)
     find_package(KF5Plasma ${KF_DEP_VERSION} REQUIRED)
+else()
+    set(KF5Plasma_FOUND 0)
 endif()
 
 find_package(KF5Activities ${KF_DEP_VERSION})
