--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,7 +62,6 @@ target_link_libraries(KF5Runner
     PUBLIC
         Qt${QT_MAJOR_VERSION}::Core
         KF5::I18n
-        KF5::ConfigCore
         Qt${QT_MAJOR_VERSION}::Gui # QIcon
         KF5::CoreAddons # KPluginFactory
     PRIVATE
@@ -79,6 +78,12 @@ if(NOT EXCLUDE_DEPRECATED_BEFORE_AND_AT STREQUAL "CURRENT" AND
         PRIVATE
             KF5::KIOCore #KProtocolInfo
     )
+endif()
+if(NOT EXCLUDE_DEPRECATED_BEFORE_AND_AT STREQUAL "CURRENT" AND
+   EXCLUDE_DEPRECATED_BEFORE_AND_AT VERSION_LESS 5.94.0)
+target_link_libraries(KF5Runner PUBLIC KF5::ConfigCore)
+else()
+target_link_libraries(KF5Runner PRIVATE KF5::ConfigCore)
 endif()
 if(HAVE_KACTIVITIES)
     target_link_libraries(KF5Runner PRIVATE KF5::Activities)
