--- a/src/data/servicetypes/plasma-runner.desktop
+++ b/src/data/servicetypes/plasma-runner.desktop
@@ -110,3 +110,6 @@ Type=bool
 # If a runner has produced a match with the same id the match will be removed in favor of the other runner's match
 [PropertyDef::X-Plasma-Runner-Weak-Results]
 Type=bool
+
+[PropertyDef::X-Plasma-Runner-Has-Activation]
+Type=bool
