RunnerContext::addMatch: Fix broken handling of relevance for often launched entries
We did not add the match where we adjusted the relevance to the internal list.

Relates to https://phabricator.kde.org/T13989

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -30,7 +30,7 @@ target_link_libraries(fakerunnerplugin  KF5Runner)
 kcoreaddons_desktop_to_json(fakerunnerplugin metadatafile1.desktop)
 ecm_add_tests(
     runnermanagerhistorytest.cpp
-    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF5Runner Qt${QT_MAJOR_VERSION}::Widgets
+    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF5Runner Qt${QT_MAJOR_VERSION}::Widgets KF5::ConfigCore
 )
 kcoreaddons_target_static_plugins(runnermanagerhistorytest krunnertest)
 
