Fix renaming of plugin ID when converting DBus runner metadata files
BUG: 456562

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -43,6 +43,10 @@ ecm_add_tests(
     runnermanagertest.cpp
     LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF5Runner Qt${QT_MAJOR_VERSION}::Widgets Qt${QT_MAJOR_VERSION}::DBus KF5::ConfigCore
 )
+ecm_add_tests(
+    testmetadataconversion.cpp
+    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF5Runner Qt${QT_MAJOR_VERSION}::Widgets Qt${QT_MAJOR_VERSION}::DBus KF5::ConfigCore
+)
 
 add_executable(testremoterunner)
 qt_add_dbus_adaptor(demoapp_dbus_adaptor_SRCS "../src/data/org.kde.krunner1.xml" testremoterunner.h TestRemoteRunner)
