--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -160,6 +160,7 @@ if(BUILD_QCH)
             KRUNNER_DEPRECATED_EXPORT
             "KRUNNER_DEPRECATED_VERSION(x, y, t)"
             "KRUNNER_DEPRECATED_VERSION_BELATED(x, y, xt, yt, t)"
+            "KRUNNER_ENUMERATOR_DEPRECATED_VERSION(x, y, t)"
         PREDEFINED_MACROS
             "KSERVICE_BUILD_DEPRECATED_SINCE(x, y)=1"
             "PLASMA_ENABLE_DEPRECATED_SINCE(x, y)=1"
