Ignore "templates" folder for cppcheck CI
The contens is not valid C++ and thus we would only get false positives

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -15,3 +15,4 @@ Dependencies:
 Options:
   test-before-installing: True
   require-passing-tests-on: [ 'Linux', 'FreeBSD' ]
+  cppcheck-ignore-files: ['templates/']
