templates/runner: Use kcoreaddons_add_plugin macro

--- a/templates/runner/src/CMakeLists.txt
+++ b/templates/runner/src/CMakeLists.txt
@@ -1,11 +1,9 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_org.kde.%{APPNAMELC}\")
 
-add_library(%{APPNAMELC} MODULE)
+kcoreaddons_add_plugin(%{APPNAMELC} INSTALL_NAMESPACE "kf6/krunner")
 
 target_sources(%{APPNAMELC} PRIVATE
     %{APPNAMELC}.cpp
 )
 
 target_link_libraries(%{APPNAMELC} KF6::Runner KF6::I18n)
-
-install(TARGETS %{APPNAMELC} DESTINATION ${KDE_INSTALL_PLUGINDIR}/kf5/krunner)
