--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: 2021 Alexander Lohnau <alexander.lohnau@gmx.de>
 # SPDX-License-Identifier: BSD-2-Clause
-find_package(Qt${QT_MAJOR_VERSION} ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test)
+find_package(Qt6 ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test)
 
 include(ECMAddTests)
 
@@ -8,11 +8,11 @@ remove_definitions(-DQT_NO_CAST_FROM_ASCII)
 
 ecm_add_tests(
    dbusrunnertest.cpp
-   LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF6Runner Qt${QT_MAJOR_VERSION}::Widgets Qt${QT_MAJOR_VERSION}::DBus KF6::ConfigCore
+   LINK_LIBRARIES Qt6::Test KF6Runner Qt6::Widgets Qt6::DBus KF6::ConfigCore
 )
 ecm_add_tests(
         runnermatchmethodstest.cpp
-    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF6Runner Qt${QT_MAJOR_VERSION}::Widgets KF6::ConfigCore
+    LINK_LIBRARIES Qt6::Test KF6Runner Qt6::Widgets KF6::ConfigCore
 )
 
 
@@ -21,31 +21,31 @@ target_link_libraries(fakerunnerplugin  KF6Runner)
 kcoreaddons_desktop_to_json(fakerunnerplugin metadatafile1.desktop)
 ecm_add_tests(
     runnermanagerhistorytest.cpp
-    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF6Runner Qt${QT_MAJOR_VERSION}::Widgets KF6::ConfigCore
+    LINK_LIBRARIES Qt6::Test KF6Runner Qt6::Widgets KF6::ConfigCore
 )
 kcoreaddons_target_static_plugins(runnermanagerhistorytest krunnertest)
 
 ecm_add_tests(
     runnermanagersinglerunnermodetest.cpp
-    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF6Runner Qt${QT_MAJOR_VERSION}::Widgets Qt${QT_MAJOR_VERSION}::DBus KF6::ConfigCore
+    LINK_LIBRARIES Qt6::Test KF6Runner Qt6::Widgets Qt6::DBus KF6::ConfigCore
 )
 
 ecm_add_tests(
     runnermanagertest.cpp
-    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF6Runner Qt${QT_MAJOR_VERSION}::Widgets Qt${QT_MAJOR_VERSION}::DBus KF6::ConfigCore
+    LINK_LIBRARIES Qt6::Test KF6Runner Qt6::Widgets Qt6::DBus KF6::ConfigCore
 )
 kcoreaddons_target_static_plugins(runnermanagertest krunnertest)
 ecm_add_tests(
     testmetadataconversion.cpp
-    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test KF6Runner Qt${QT_MAJOR_VERSION}::Widgets Qt${QT_MAJOR_VERSION}::DBus KF6::ConfigCore
+    LINK_LIBRARIES Qt6::Test KF6Runner Qt6::Widgets Qt6::DBus KF6::ConfigCore
 )
 
 add_executable(testremoterunner)
 qt_add_dbus_adaptor(demoapp_dbus_adaptor_SRCS "../src/data/org.kde.krunner1.xml" testremoterunner.h TestRemoteRunner)
 target_sources(testremoterunner PRIVATE testremoterunner.cpp ${demoapp_dbus_adaptor_SRCS})
 target_link_libraries(testremoterunner
-    Qt${QT_MAJOR_VERSION}::DBus
-    Qt${QT_MAJOR_VERSION}::Gui
+    Qt6::DBus
+    Qt6::Gui
     KF6::Runner
 )
 
