Import RunnerResultsModel model from milou
The model is quite an important part of the KRunner ecosystem and thus it makes sense
to have it in the framework. For now, it is QML-only, but we can export it when needed.
A possible usecase is the model that kicker uses.

This should also make potential refactorings for the sorting easier, because all components except the plugins
are in one central place.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ include(ECMQtDeclareLoggingCategory)
 include(ECMSetupQtPluginMacroNames)
 include(ECMDeprecationSettings)
 include(KDEGitCommitHooks)
-
+include(ECMQmlModule)
 
 set(EXCLUDE_DEPRECATED_BEFORE_AND_AT 0 CACHE STRING "Control the range of deprecated API excluded from the build [default=0].")
 
