Add dummy QWidgets test app for model

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -52,3 +52,10 @@ include(../KF6KRunnerMacros.cmake)
 krunner_configure_test(dbusrunnertest testremoterunner DESKTOP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/dbusrunnertest.desktop")
 krunner_configure_test(runnermanagersinglerunnermodetest testremoterunner DESKTOP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/dbusrunnertest.desktop")
 krunner_configure_test(runnermanagertest testremoterunner DESKTOP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/dbusrunnertest.desktop")
+
+find_package(Qt6 ${QT_MIN_VERSION} OPTIONAL_COMPONENTS Widgets)
+if (TARGET Qt6::Widgets)
+    add_executable(modelwidgettest modelwidgettest.cpp)
+    target_link_libraries(modelwidgettest krunnermodel_STATIC Qt6::Widgets)
+    kcoreaddons_target_static_plugins(modelwidgettest krunnertest)
+endif()
