Update SO version to 6
For consistency with other KF modules use ecm_setup_version() to inject
the value into the system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ ecm_setup_version(PROJECT
     VARIABLE_PREFIX KRUNNER
     VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/krunner_version.h"
     PACKAGE_VERSION_FILE "${CMAKE_CURRENT_BINARY_DIR}/KF6RunnerConfigVersion.cmake"
+    SOVERSION 6
 )
 
 # Dependencies
