--- a/templates/runner/CMakeLists.txt
+++ b/templates/runner/CMakeLists.txt
@@ -3,12 +3,12 @@ cmake_minimum_required(VERSION 3.16)
 project(%{APPNAMELC})
 
 set(QT_MIN_VERSION "6.4.0")
-set(KF6_MIN_VERSION "5.72.0")
+set(KF_MIN_VERSION "5.72.0")
 
-find_package(ECM ${KF6_MIN_VERSION} REQUIRED NO_MODULE)
+find_package(ECM ${KF_MIN_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Core)
-find_package(KF6 ${KF6_MIN_VERSION} REQUIRED COMPONENTS Runner I18n)
+find_package(KF6 ${KF_MIN_VERSION} REQUIRED COMPONENTS Runner I18n)
 
 include(KDEInstallDirs)
 include(KDECMakeSettings)
