Make templates co-installable with KF5

--- a/templates/CMakeLists.txt
+++ b/templates/CMakeLists.txt
@@ -2,8 +2,8 @@
 # SPDX-License-Identifier: BSD-2-Clause
 
 set(apptemplate_DIRS
-    runner
-    runnerpython
+    runner6
+    runner6python
 )
 
 kde_package_app_templates(TEMPLATES ${apptemplate_DIRS} INSTALL_DIR ${KDE_INSTALL_KAPPTEMPLATESDIR})
