Add autotest to ensure RunnerManager launches queries async

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -7,37 +7,22 @@ include(ECMAddTests)
 remove_definitions(-DQT_NO_CAST_FROM_ASCII)
 
 ecm_add_tests(
-   dbusrunnertest.cpp
-   LINK_LIBRARIES Qt6::Gui Qt6::Test KF6Runner Qt6::DBus KF6::ConfigCore
+    dbusrunnertest.cpp
+    runnermatchmethodstest.cpp
+    runnermanagerhistorytest.cpp
+    runnermanagersinglerunnermodetest.cpp
+    runnermanagertest.cpp
+    testmetadataconversion.cpp
+    threadingtest.cpp
+    LINK_LIBRARIES Qt6::Gui Qt6::DBus Qt6::Test KF6::Runner KF6::ConfigCore
 )
-ecm_add_tests(
-        runnermatchmethodstest.cpp
-    LINK_LIBRARIES Qt6::Gui Qt6::Test KF6Runner KF6::ConfigCore
-)
-
 
 kcoreaddons_add_plugin(fakerunnerplugin SOURCES fakerunnerplugin.cpp INSTALL_NAMESPACE "krunnertest" STATIC)
-target_link_libraries(fakerunnerplugin  KF6Runner)
-ecm_add_tests(
-    runnermanagerhistorytest.cpp
-    LINK_LIBRARIES Qt6::Gui Qt6::Test KF6Runner KF6::ConfigCore
-)
+target_link_libraries(fakerunnerplugin KF6Runner)
+
 kcoreaddons_target_static_plugins(runnermanagerhistorytest krunnertest)
-
-ecm_add_tests(
-    runnermanagersinglerunnermodetest.cpp
-    LINK_LIBRARIES Qt6::Gui Qt6::Test KF6Runner Qt6::DBus KF6::ConfigCore
-)
-
-ecm_add_tests(
-    runnermanagertest.cpp
-    LINK_LIBRARIES Qt6::Gui Qt6::Test KF6Runner Qt6::DBus KF6::ConfigCore
-)
 kcoreaddons_target_static_plugins(runnermanagertest krunnertest)
-ecm_add_tests(
-    testmetadataconversion.cpp
-    LINK_LIBRARIES Qt6::Test KF6Runner Qt6::DBus KF6::ConfigCore
-)
+kcoreaddons_target_static_plugins(threadingtest krunnertest)
 
 add_executable(testremoterunner)
 qt_add_dbus_adaptor(demoapp_dbus_adaptor_SRCS "../src/data/org.kde.krunner1.xml" testremoterunner.h TestRemoteRunner)
@@ -52,6 +37,7 @@ include(../KF6KRunnerMacros.cmake)
 krunner_configure_test(dbusrunnertest testremoterunner DESKTOP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/dbusrunnertest.desktop")
 krunner_configure_test(runnermanagersinglerunnermodetest testremoterunner DESKTOP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/dbusrunnertest.desktop")
 krunner_configure_test(runnermanagertest testremoterunner DESKTOP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/dbusrunnertest.desktop")
+krunner_configure_test(threadingtest testremoterunner DESKTOP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/dbusrunnertest.desktop")
 
 find_package(Qt6 ${QT_MIN_VERSION} OPTIONAL_COMPONENTS Widgets)
 if (TARGET Qt6::Widgets)
