Improve runner6 template and make it properly work

--- a/templates/runner6/src/CMakeLists.txt
+++ b/templates/runner6/src/CMakeLists.txt
@@ -6,4 +6,8 @@ target_sources(%{APPNAMELC} PRIVATE
     %{APPNAMELC}.cpp
 )
 
-target_link_libraries(%{APPNAMELC} KF6::Runner KF6::I18n)
+target_link_libraries(%{APPNAMELC}
+    Qt6::Gui # QAction
+    KF6::Runner
+    KF6::I18n
+)
