runner6: Include KDEClangformat in CMakeLists.txt
Since the template is formatted based on this coding style, we should make it as easy as possible for devs to be consistent in their style

--- a/templates/runner6/CMakeLists.txt
+++ b/templates/runner6/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(Qt6 ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENTS Core Gui)
 find_package(KF6 ${KF_MIN_VERSION} REQUIRED COMPONENTS Runner I18n)
 
 include(KDEInstallDirs)
+include(KDEClangFormat)
 include(KDECMakeSettings)
 include(KDEFrameworkCompilerSettings NO_POLICY_SCOPE)
 include(FeatureSummary)
