Adjust to changed signature of kcoreaddons_target_static_plugins
Depends on https://invent.kde.org/frameworks/kcoreaddons/-/merge_requests/360

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -23,10 +23,10 @@ target_link_libraries(fakerunnerplugin KF6Runner Qt6::Gui)
 kcoreaddons_add_plugin(suspendedrunnerplugin SOURCES plugins/suspendedrunner.cpp INSTALL_NAMESPACE "krunnertest2" STATIC)
 target_link_libraries(suspendedrunnerplugin KF6Runner)
 
-kcoreaddons_target_static_plugins(runnermanagerhistorytest krunnertest)
-kcoreaddons_target_static_plugins(runnermanagertest krunnertest)
-kcoreaddons_target_static_plugins(runnermanagertest krunnertest2)
-kcoreaddons_target_static_plugins(threadingtest krunnertest)
+kcoreaddons_target_static_plugins(runnermanagerhistorytest NAMESPACE krunnertest)
+kcoreaddons_target_static_plugins(runnermanagertest NAMESPACE krunnertest)
+kcoreaddons_target_static_plugins(runnermanagertest NAMESPACE krunnertest2)
+kcoreaddons_target_static_plugins(threadingtest NAMESPACE krunnertest)
 
 add_executable(testremoterunner)
 qt_add_dbus_adaptor(demoapp_dbus_adaptor_SRCS "../src/data/org.kde.krunner1.xml" plugins/testremoterunner.h TestRemoteRunner)
@@ -47,7 +47,7 @@ find_package(Qt6 ${QT_MIN_VERSION} OPTIONAL_COMPONENTS Widgets)
 if (TARGET Qt6::Widgets)
     add_executable(modelwidgettest modelwidgettest.cpp)
     target_link_libraries(modelwidgettest KF6::Runner Qt6::Widgets)
-    kcoreaddons_target_static_plugins(modelwidgettest krunnertest)
+    kcoreaddons_target_static_plugins(modelwidgettest NAMESPACE krunnertest)
 
 endif()
 add_executable(pluginbenchmarker pluginbenchmarker.cpp)
