--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -12,8 +12,7 @@ portingAid: false
 deprecated: false
 release: true
 libraries:
- - qmake: KRunner
-   cmake: "KF6::Runner"
+ - cmake: "KF6::Runner"
 cmakename: KF6Runner
 
 public_lib: true
