--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ ecm_setup_version(PROJECT
 # Dependencies
 set(REQUIRED_QT_VERSION 6.5.0)
 
-find_package(Qt6 ${REQUIRED_QT_VERSION} NO_MODULE REQUIRED Gui Quick)
+find_package(Qt6 ${REQUIRED_QT_VERSION} NO_MODULE REQUIRED Gui)
 
 ecm_set_disabled_deprecation_versions(
     QT ${REQUIRED_QT_VERSION}
